--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li><a href="pong">Pong</a></li>
+            <li><a href="Pong">Pong</a></li>
         </ul>
     </body>
 </html>
