--- a/Pong/index.html
+++ b/Pong/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <base href="pong" />
+        <title>Pong</title>
         <link rel="stylesheet" type="text/css" href="site.css" />
     </head>
     <body>
